# argus-agent

./: .gitignore  CLAUDE.md  Makefile
api/: CLAUDE.md  (+1 more)
backend/: .env.dev  .env.example  .gitignore  CLAUDE.md  Makefile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 07b49ca40821_add_user_management_tables.py  0e07298280dd_add_mcp_server_configs_table_and_user_.py  4a9d6f1b2c3d_add_tools_table.py  85222bba3a92_merge_mcp_and_tools_heads.py  8d1c2b7e4f90_rename_web_search_builtin.py  a1b2c3d4e5f6_add_provider_models_table.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/endpoints/: auth.py  llm_providers.py  mcp_configs.py  providers.py  tools.py  users.py
backend/app/auth/: deps.py  jwt.py  oidc.py
backend/app/core/: config.py  crypto.py  mcp_client.py  providers.py
backend/app/db/: base_class.py  models.py  session.py
backend/app/models/: mcp_config.py  tool.py  user.py
backend/app/schemas/: __init__.py  llm_provider.py  mcp_config.py  tool.py  user.py
backend/app/services/: llm_provider_service.py  mcp_config_service.py  provider_test.py  tool_manager.py
backend/app/tools/: __init__.py  loader.py  web_search.py
backend/migrations/: env.py
backend/migrations/versions/: add_tools_table.py
backend/tests/: conftest.py  test_alembic_heads.py  test_auth.py  test_auth_deps.py  test_crypto.py  test_dependency_manifest.py  test_jwt.py  test_mcp_client.py  test_mcp_configs.py  test_provider_model_migration.py  test_provider_test.py  test_providers.py  test_tools.py  test_users.py
(+145 files in other folders)
