[project]
name = "argus-agents"
version = "0.1.0"
description = "Agent Management Platform"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "sqlalchemy==2.0.48",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "alembic==1.18.1",
    "python-multipart>=0.0.22",
    "python-jose[cryptography]==3.3.0",
    "cryptography==44.0.0",
    "httpx[socks]>=0.28.1",
    "itsdangerous>=2.2.0",
    "langchain-openai>=0.3.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx[socks]>=0.28.1",
]
